--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>eu.matejtomecek</groupId>
-    <artifactId>DogeProfiler</artifactId>
+    <artifactId>dogeprofiler</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <name>DogeProfiler</name>
